# aivoiceqa

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  server.py  start.sh
.claude/agents/: agent-a-reco-client.md  agent-b-twilio-receiver.md  agent-c-vad-engine.md  agent-d-audio-gen.md  agent-e-scenario-runner.md  agent-f-evaluation.md  agent-g-reporting.md  orchestrator.md  qa-agent.md
config/: settings.py
core/: audio_cache.py  audio_gen.py  audio_utils.py  evaluator.py  persona_runner.py  reporter.py  scenario_runner.py  tier1_metrics.py  tier2_metrics.py  tier3_metrics.py  vad.py
docs/: evaluation_metrics.md  reco_block_id_change.md  setup_and_usage.md
models/: __init__.py  result.py  scenario.py
receivers/: __init__.py  base.py  mock_receiver.py  twilio_receiver.py
reco/: __init__.py  client.py  mock_data.py
scenarios/: example_scripted.yaml
static/: index.html
tasks/: lessons.md  status.md  todo.md
tests/: conftest.py  test_audio_gen.py  test_evaluator.py  test_models.py  test_reco_client.py  test_reporter.py  test_scenario_runner.py  test_twilio_receiver.py  test_vad.py
tests/integration/: test_component_wiring.py  test_full_pipeline.py  test_scenario_formats.py
